# fusionpipe

./: .env  .github  .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  README_dev_guide.md  README_postgre.md  config.yaml  index.html  pyproject.toml  sitemap.xml  test_setup.sql
.github/workflows/: python-tests.yml
best_practices_jupyter_lab/: index.html
best_practices_jupyter_vscode/: index.html
best_practices_matlab/: index.html
best_practices_octave/: index.html
best_practices_pipeline_package/: index.html
best_practices_vscode/: index.html
dev_maintainer_guide/: index.html
developer_guide/design_principles/: index.html
docker/: docker-compose-set-up.yml
docs/: mkdocs.yml
docs/docs/: best_practices_pipeline_package.md  dev_maintainer_guide.md  index.md  installation_single.md  intro.md  package_management.md  package_management_matlab.md  package_management_python.md  ray_management.md
docs/docs/user_guide/: complete_list_interaction.md  develop_node.md  pipeline_interaction.md  pipeline_interaction_advanced.md  pipeline_interation.md
fp_user_utils/: README.md  pyproject.toml
fp_user_utils/matlab_user_utils/: get_current_node_folder_path.m  get_current_node_folder_path_code.m  get_current_node_folder_path_data.m  get_current_node_folder_path_reports.m  get_info_parents.m  get_node_id.m  get_node_parents_and_edge_ids.m  get_node_parents_db.m  get_parent_folder_path_from_edge_id.m  get_parent_info_from_edge_id.m
fp_user_utils/matlab_user_utils/matlab_tests/: test_matlab_user_utils.m
fp_user_utils/src/fp_user_utils/: __init__.py  user_api.py
installation_single/: index.html
intro/: index.html
migration_scripts/: migration_add_node_groups.py  migration_add_subtrees.py  migration_v0_v2_0_0.py  migration_v2_0_0_to_v2_1_0.py  migration_v2_1_0_to_2_2_0.py
package_management_matlab/: index.html
package_management_python/: index.html
postgres/: create_db.txt
scratch/: api_trial.py  create_simple_db.py  dbconnction.py  dump_json.py  init_database.py  nodes_migration.py  pipeline.json  prototype_db_interaction.py  prototype_pipeline_db.py  test_runner.py  test_user_interaction.py  tmp_ray.py  try_pipeline.py  viz_development.py
search/: search_index.json
src/fusionpipe/: __init__.py
src/fusionpipe/admin_utils/: clear_recreate_init_database.py  dump_tables_to_csv.py  grant_folder_permission_to_group.sh  grant_project_permission_to_group.sh  set_usr_env.sh
src/fusionpipe/api/: README.md  main.py
src/fusionpipe/frontend/: README.md  package-lock.json  package.json
tests/: conftest.py  test_api.py  test_db_utils.py  test_examples.py  test_init_node_kernel.py  test_node_api.py  test_pip_utils.py  test_pipeline_handle_node_groups.py  test_runner.py  test_runner_utils_helpers.py  test_user_api.py
user_guide/complete_list_interaction/: index.html
user_guide/develop_node/: index.html
user_guide/pipeline_interaction/: index.html
user_guide/pipeline_interaction_advanced/: index.html
(+43 files in other folders)
